Modifica alle api
