# docs/openapi/api-internal-b2b-pa.yaml
@@ -325,77 +325,7 @@ paths:
           content:
             application/problem+json:
               schema:
-                $ref: '#/components/schemas/Problem'
-
-    ###########################################################################################
-    ###                          CREAZIONE RICHIESTE DI NOTIFICA                           ###
-    ###########################################################################################
-
-  "/delivery/requests":
-    post:
-      deprecated: true
-      summary: Richiesta invio notifica
-      description: |-
-        Operazione utilizzata dalla Pubblica Amministrazione per richiedere l'invio di una notifica.
-
-        La restituzione di uno stato HTTP 202 significa solo che la richiesta è sintatticamente
-        valida, non che la richiesta sia stata validata ed accettata. <br/>
-        Per conoscere lo stato di accettazione della richiesta di notifica bisogna utilizzare l'operazione
-        _getNotificationRequestStatus_ oppure utilizzare la modalità push prevista dai webhook. <br/>
-        
-        <details no-external>
-        <summary><b> Attributi progettazione di alto livello </b></summary>
-        | Proprietà                | Valore             |
-        | -----------------------: | :----------------- |
-        | __Intended usage__       | B2B, WEB           |
-        | __Modalità interazione__ | Sincrona           |
-        | __TPS (stimato)__        | 5 richieste/sec    |
-        | __Idempotenza__          | No                 |
-        | __Read/Write intensive__ | Write              |
-        | __Cachable__             | No                 |
-        </details>
-      tags:
-        - NewNotification
-      operationId: sendNewNotification
-      parameters:                                                     # NO EXTERNAL
-        - $ref: '#/components/parameters/uidAuthFleet'                # NO EXTERNAL
-        - $ref: '#/components/parameters/cxTypeAuthFleet'             # NO EXTERNAL
-        - $ref: '#/components/parameters/cxIdAuthFleet'               # NO EXTERNAL
-        - $ref: '#/components/parameters/cxGroupsAuthFleet'           # NO EXTERNAL
-        - $ref: '#/components/parameters/headerSourceChannel'         # NO EXTERNAL
-        - $ref: '#/components/parameters/headerSourceChannelDetails'  # NO EXTERNAL
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas-pn-notification.yaml#/components/schemas/NewNotificationRequest"
-        required: true
-      responses:
-        '202':
-          description: Accepted
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/NewNotificationResponse"
-        '400':
-          description: Bad request
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-        '409':
-          description: Conflict
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-        '500':
-          description: Internal error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-    
+                $ref: '#/components/schemas/Problem'    
 
     ###########################################################################################
     ###                        VERIFICA STATO RICHIESTE DI NOTIFICA                         ###
@@ -445,7 +375,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Problem'
 
-  "/delivery/v2/requests":
+  "/delivery/requests":
     post:
       summary: Richiesta invio notifica
       description: |-
@@ -469,7 +399,7 @@ paths:
         </details>
       tags:
         - NewNotification
-      operationId: sendNewNotificationV2
+      operationId: sendNewNotification
       parameters: # NO EXTERNAL
         - $ref: '#/components/parameters/uidAuthFleet'             # NO EXTERNAL
         - $ref: '#/components/parameters/cxTypeAuthFleet'          # NO EXTERNAL
@@ -480,7 +410,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "./schemas-pn-notification.yaml#/components/schemas/NewNotificationRequestV2"
+              $ref: "./schemas-pn-notification.yaml#/components/schemas/NewNotificationRequest"
         required: true
       responses:
         '202':
@@ -515,11 +445,10 @@ paths:
   
   "/delivery/notifications/sent/{iun}":
     get:
-      deprecated: true
       summary: 'Mittente: lettura dettagli notifica'
       description: |-
         Questa operazione permette di leggere tutti i dettagli di una notifica accettata. <br/>
-
+        
         <details no-external>
         <summary><b> Attributi progettazione di alto livello </b></summary>
         | Proprietà                | Valore             |
@@ -548,53 +477,6 @@ paths:
             "application/json":
               schema:
                 $ref: "#/components/schemas/FullSentNotification"
-        '400':
-          description: Bad request
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-        '500':
-          description: Internal error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-
-  "/delivery/v2/notifications/sent/{iun}":
-    get:
-      summary: 'Mittente: lettura dettagli notifica'
-      description: |-
-        Questa operazione permette di leggere tutti i dettagli di una notifica accettata. <br/>
-        
-        <details no-external>
-        <summary><b> Attributi progettazione di alto livello </b></summary>
-        | Proprietà                | Valore             |
-        | -----------------------: | :----------------- |
-        | __Intended usage__       | B2B, WEB           |
-        | __Modalità interazione__ | Sincrona           |
-        | __TPS (stimato)__        |                    |
-        | __Idempotenza__          | Si                 |
-        | __Read/Write intensive__ | Read               |
-        | __Cachable__             | No                 |
-        </details>
-      tags:
-        - SenderReadB2B
-      operationId: getSentNotificationV2                                      # NO EXTERNAL
-#      operationId: retrieveSentNotificationV2                                # ONLY EXTERNAL
-      parameters:
-        - $ref: '#/components/parameters/uidAuthFleet'            # NO EXTERNAL
-        - $ref: '#/components/parameters/cxTypeAuthFleet'         # NO EXTERNAL
-        - $ref: '#/components/parameters/cxIdAuthFleet'           # NO EXTERNAL
-        - $ref: '#/components/parameters/cxGroupsAuthFleet'       # NO EXTERNAL
-        - $ref: './parameters-notification-search.yaml#/components/parameters/pathIun'
-      responses:
-        '200':
-          description: OK
-          content:
-            "application/json":
-              schema:
-                $ref: "#/components/schemas/FullSentNotificationV2"
         '400':
           description: Bad request
           content:
@@ -1204,47 +1086,12 @@ components:
     ###########################################################################################
     ###                              DTO NOTIFICA CON DETTAGLI                              ###
     ###########################################################################################
-
     FullSentNotification:
       description: >-
         Le informazioni riguardanti una notifica (richiesta di notifica accettata) e il 
         processo di inoltro della notifica verso il cittadino.
       allOf:
         - $ref: './schemas-pn-notification.yaml#/components/schemas/SentNotification'
-        - type: object
-          required:
-            - notificationStatus
-            - notificationStatusHistory
-            - timeline
-          properties:
-            notificationStatus:
-              $ref: '#/components/schemas/NotificationStatus'
-            notificationStatusHistory:
-              $ref: '#/components/schemas/NotificationStatusHistory'
-            timeline:
-              description: >-
-                elenco dettagliato di tutto ciò che è accaduto durrante il processo di notifica
-              type: array
-              items:
-                $ref: '#/components/schemas/TimelineElement'
-            recipientIds:                                                               # NO EXTERNAL
-              description: Lista degli identificativi anonimizzati dei destinatari      # NO EXTERNAL
-              type: array                                                               # NO EXTERNAL
-              items:                                                                    # NO EXTERNAL
-                type: string                                                            # NO EXTERNAL
-            sourceChannel:                                                              # NO EXTERNAL
-              type: string                                                              # NO EXTERNAL
-              description: Canale sorgente della richiesta di notifica                  # NO EXTERNAL
-            sourceChannelDetails:                                                       # NO EXTERNAL
-              type: string                                                              # NO EXTERNAL
-              description: Dettagli del canale sorgente della richiesta di notifica     # NO EXTERNAL
-
-    FullSentNotificationV2:
-      description: >-
-        Le informazioni riguardanti una notifica (richiesta di notifica accettata) e il 
-        processo di inoltro della notifica verso il cittadino.
-      allOf:
-        - $ref: './schemas-pn-notification.yaml#/components/schemas/SentNotificationV2'
         - type: object
           required:
             - notificationStatus
